# doi

./: .typos.toml  Cargo.toml  README.md
.sisyphus/: boulder.json
.sisyphus/notepads/doi-metadata/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: doi-metadata.md
examples/: basic.rs
src/: lib.rs  parse.rs
src/crossref/: client.rs  config.rs  error.rs  mod.rs  models.rs  rate_limit.rs
src/csl/: metadata.rs  mod.rs  value.rs
src/doi_org/: client.rs  config.rs  error.rs
tests/: crossref_client.rs  crossref_models.rs
tests/fixtures/: crossref.json
