[package]
name = "doi"
version = "0.1.0"
edition = "2024"

[dependencies]
governor = { version = "0.10", features = ["std"] }
async-trait = "0.1"
astral-reqwest-middleware = "0.4.2"
astral-reqwest-retry = "0.8.0"
http = "1"
httpdate = "1"
regex = "1"
reqwest = { version = "^0.12.0", default-features = true, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
