[package]
name = "doi"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
reqwest = { version = "^0.12.0", default-features = true, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
snafu = "0.8"
tokio = { version = "1", features = ["sync"] }
chrono = { version = "0.4.43", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
